--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,8 +57,8 @@ spring.mvc.static-path-pattern=/**
 
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path},file:${web.upload-ubuntu}
 server.port=8080
-
-# 模板配置
+server.address=0.0.0.0
+# 模板配置ß
 # 这个开发配置为false，避免改了模板还要重启服务器
 spring.thymeleaf.cache=false
 # 这个是配置模板路径的，默认就是templates，可不用配置
